force-app/main/default/objects/Industry_Profile__c/Industry_Profile__c.object-meta.xml
<CustomObject>
    <description>This object contains industry specific account related data that will appear as a related list on the account page layouts. Record types will drive the visibility of the data to the users.</description>
    <label>Industry Profile</label>
    <nameField>
        <label>Industry Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Industry Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>