force-app/main/default/objects/Industry_Profile__c/fields/Account_Info_Comments__c.field-meta.xml
<CustomField>
    <fullName>Account_Info_Comments__c</fullName>
    <label>Account Info Comments</label>
    <length>100</length>
    <type>Text</type>
</CustomField>