force-app/main/default/objects/Industry_Profile__c/fields/Account_Linkage__c.field-meta.xml
<CustomField>
    <fullName>Account_Linkage__c</fullName>
    <label>Account Linkage</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Industry Profiles</relationshipLabel>
    <relationshipName>Industry_Profiles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>