force-app/main/default/objects/Industry_Profile__c/fields/Account_Tier__c.field-meta.xml
<CustomField>
    <fullName>Account_Tier__c</fullName>
    <inlineHelpText>The tier of the account based on sales activities.</inlineHelpText>
    <label>Account Tier</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
            </value>
            <value>
                <fullName>IPS Only</fullName>
            </value>
            <value>
                <fullName>HW Only</fullName>
            </value>
            <value>
                <fullName>ML Only</fullName>
            </value>
            <value>
                <fullName>DMB Only</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>