force-app/main/default/objects/Industry_Profile__c/fields/Ancillary_Services_Provided__c.field-meta.xml
<CustomField>
    <fullName>Ancillary_Services_Provided__c</fullName>
    <inlineHelpText>May select more than one.</inlineHelpText>
    <label>Ancillary Services Provided</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Baggage</fullName>
            </value>
            <value>
                <fullName>Upgrades</fullName>
            </value>
            <value>
                <fullName>Specific meals</fullName>
            </value>
            <value>
                <fullName>Pre-pay wifi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>