force-app/main/default/objects/Industry_Profile__c/fields/Application_Version__c.field-meta.xml
<CustomField>
    <fullName>Application_Version__c</fullName>
    <inlineHelpText>For NCR customers only, otherwise leave blank</inlineHelpText>
    <label>Application Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>