force-app/main/default/objects/Industry_Profile__c/fields/Appointment_Scheduling_SW_Provider__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Scheduling_SW_Provider__c</fullName>
    <label>Appointment Scheduling SW Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Epic</fullName>
            </value>
            <value>
                <fullName>McKesson</fullName>
            </value>
            <value>
                <fullName>NCR</fullName>
            </value>
            <value>
                <fullName>Other None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>