force-app/main/default/objects/Industry_Profile__c/fields/Assortment_Planning_Optimization__c.field-meta.xml
<CustomField>
    <fullName>Assortment_Planning_Optimization__c</fullName>
    <label>Assortment Planning</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Galleria</fullName>
            </value>
            <value>
                <fullName>In House</fullName>
            </value>
            <value>
                <fullName>JDA Software</fullName>
            </value>
            <value>
                <fullName>PredictixAS</fullName>
            </value>
            <value>
                <fullName>Not Used</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>