force-app/main/default/objects/Industry_Profile__c/fields/ATM_Asset_Management_Tool__c.field-meta.xml
<CustomField>
    <fullName>ATM_Asset_Management_Tool__c</fullName>
    <label>ATM Asset Management Tool</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NCR</fullName>
            </value>
            <value>
                <fullName>Wincor</fullName>
            </value>
            <value>
                <fullName>Diebold</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>