force-app/main/default/objects/Industry_Profile__c/fields/ATM_Monitoring__c.field-meta.xml
<CustomField>
    <fullName>ATM_Monitoring__c</fullName>
    <label>ATM Monitoring</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NCR</fullName>
            </value>
            <value>
                <fullName>Wincor</fullName>
            </value>
            <value>
                <fullName>Diebold</fullName>
            </value>
            <value>
                <fullName>IBM</fullName>
            </value>
            <value>
                <fullName>HP</fullName>
            </value>
            <value>
                <fullName>Processor/Switch</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>