force-app/main/default/objects/Industry_Profile__c/fields/ATM_Multivendor_SW_Provider__c.field-meta.xml
<CustomField>
    <fullName>ATM_Multivendor_SW_Provider__c</fullName>
    <inlineHelpText>Select vendors that are providing software to run on another vendors ATMs.</inlineHelpText>
    <label>ATM Multivendor SW Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NCR</fullName>
            </value>
            <value>
                <fullName>Wincor</fullName>
            </value>
            <value>
                <fullName>Diebold</fullName>
            </value>
            <value>
                <fullName>KAL</fullName>
            </value>
            <value>
                <fullName>Phoenix</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>