force-app/main/default/objects/Industry_Profile__c/fields/ATM_Other__c.field-meta.xml
<CustomField>
    <fullName>ATM_Other__c</fullName>
    <label>ATMED_Other</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>