force-app/main/default/objects/Industry_Profile__c/fields/ATM_Paper_Comments__c.field-meta.xml
<CustomField>
    <fullName>ATM_Paper_Comments__c</fullName>
    <label>ATM Paper Comments</label>
    <type>TextArea</type>
</CustomField>