force-app/main/default/objects/Industry_Profile__c/fields/ATM_Paper_Roll_Receipt_Journal__c.field-meta.xml
<CustomField>
    <fullName>ATM_Paper_Roll_Receipt_Journal__c</fullName>
    <label>ATM: Paper Roll (Receipt, Journal)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Diebold</fullName>
            </value>
            <value>
                <fullName>Nashua/Cinveo</fullName>
            </value>
            <value>
                <fullName>NCR</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Shades</fullName>
            </value>
            <value>
                <fullName>Wincor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>