force-app/main/default/objects/Industry_Profile__c/fields/ATM_Processing_Switch_software__c.field-meta.xml
<CustomField>
    <fullName>ATM_Processing_Switch_software__c</fullName>
    <inlineHelpText>Name of the software used by the ATM switch.</inlineHelpText>
    <label>ATM Processing: Switch Software</label>
    <length>100</length>
    <type>Text</type>
</CustomField>