force-app/main/default/objects/Industry_Profile__c/fields/ATM_Software_Comments__c.field-meta.xml
<CustomField>
    <fullName>ATM_Software_Comments__c</fullName>
    <label>ATM Software Comments</label>
    <length>200</length>
    <type>Text</type>
</CustomField>