force-app/main/default/objects/Industry_Profile__c/fields/ATMCAD_Diebold__c.field-meta.xml
<CustomField>
    <fullName>ATMCAD_Diebold__c</fullName>
    <label>ATMCAD_Diebold</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>