force-app/main/default/objects/Industry_Profile__c/fields/ATMCAD_Other__c.field-meta.xml
<CustomField>
    <fullName>ATMCAD_Other__c</fullName>
    <label>ATMCAD_Other</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>