force-app/main/default/objects/Industry_Profile__c/fields/ATMCAD_Other_Names__c.field-meta.xml
<CustomField>
    <fullName>ATMCAD_Other_Names__c</fullName>
    <label>ATMCAD_Other (Names)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>