force-app/main/default/objects/Industry_Profile__c/fields/ATMCC_GRG__c.field-meta.xml
<CustomField>
    <fullName>ATMCC_GRG__c</fullName>
    <label>ATMCC_GRG</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>