force-app/main/default/objects/Industry_Profile__c/fields/ATMCHD_GRG__c.field-meta.xml
<CustomField>
    <fullName>ATMCHD_GRG__c</fullName>
    <label>ATMCHD_GRG</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>