force-app/main/default/objects/Industry_Profile__c/fields/ATMED_GRG__c.field-meta.xml
<CustomField>
    <fullName>ATMED_GRG__c</fullName>
    <label>ATMED_GRG</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>