force-app/main/default/objects/Industry_Profile__c/fields/ATMR_Comments__c.field-meta.xml
<CustomField>
    <fullName>ATMR_Comments__c</fullName>
    <label>ATMR_Comments</label>
    <type>TextArea</type>
</CustomField>