force-app/main/default/objects/Industry_Profile__c/fields/ATMR_Diebold__c.field-meta.xml
<CustomField>
    <fullName>ATMR_Diebold__c</fullName>
    <label>ATMR_Diebold</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>