force-app/main/default/objects/Industry_Profile__c/fields/ATMR_GRG__c.field-meta.xml
<CustomField>
    <fullName>ATMR_GRG__c</fullName>
    <label>ATMR_GRG</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>