force-app/main/default/objects/Industry_Profile__c/fields/Back_Office_Platform__c.field-meta.xml
<CustomField>
    <fullName>Back_Office_Platform__c</fullName>
    <label>Back Office</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BR Data</fullName>
            </value>
            <value>
                <fullName>Factor</fullName>
            </value>
            <value>
                <fullName>In-house</fullName>
            </value>
            <value>
                <fullName>PDI</fullName>
            </value>
            <value>
                <fullName>Pinnacle</fullName>
            </value>
            <value>
                <fullName>Radiant</fullName>
            </value>
            <value>
                <fullName>Red Prairie</fullName>
            </value>
            <value>
                <fullName>Retalix 10 IM</fullName>
            </value>
            <value>
                <fullName>Retalix Back Office (RBO)</fullName>
            </value>
            <value>
                <fullName>Retalix IMS</fullName>
            </value>
            <value>
                <fullName>Retalix RBX</fullName>
            </value>
            <value>
                <fullName>Retalix Store</fullName>
            </value>
            <value>
                <fullName>Retalix WebStore</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>SIS</fullName>
            </value>
            <value>
                <fullName>Softechnics</fullName>
            </value>
            <value>
                <fullName>StorePoint (BOS)</fullName>
            </value>
            <value>
                <fullName>Tomax - Retail.net</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>