force-app/main/default/objects/Industry_Profile__c/fields/Backoffice_Image_Transports__c.field-meta.xml
<CustomField>
    <fullName>Backoffice_Image_Transports__c</fullName>
    <label>Backoffice: Image Transports</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BancTec</fullName>
            </value>
            <value>
                <fullName>Burroughs</fullName>
            </value>
            <value>
                <fullName>Canon</fullName>
            </value>
            <value>
                <fullName>CTS</fullName>
            </value>
            <value>
                <fullName>Digital Check</fullName>
            </value>
            <value>
                <fullName>Epson</fullName>
            </value>
            <value>
                <fullName>MagTek</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Panini</fullName>
            </value>
            <value>
                <fullName>RDM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>