force-app/main/default/objects/Industry_Profile__c/fields/Branch_Teller_Capture_Status__c.field-meta.xml
<CustomField>
    <fullName>Branch_Teller_Capture_Status__c</fullName>
    <inlineHelpText>For image capture used by tellers.</inlineHelpText>
    <label>Branch Teller Capture: Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deployed</fullName>
            </value>
            <value>
                <fullName>In Pilot</fullName>
            </value>
            <value>
                <fullName>In Evaluation</fullName>
            </value>
            <value>
                <fullName>No activity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>