force-app/main/default/objects/Industry_Profile__c/fields/Business_Intelligence_and_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Business_Intelligence_and_Reporting__c</fullName>
    <label>BI / Reporting</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Objects</fullName>
            </value>
            <value>
                <fullName>Cognos</fullName>
            </value>
            <value>
                <fullName>C-Star</fullName>
            </value>
            <value>
                <fullName>Microsoft</fullName>
            </value>
            <value>
                <fullName>Microstrategy</fullName>
            </value>
            <value>
                <fullName>Oracle (Hyperion)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>QuantiSense Decision Orchestration</fullName>
            </value>
            <value>
                <fullName>Retalix Analyzer</fullName>
            </value>
            <value>
                <fullName>Retalix Category Analyzer</fullName>
            </value>
            <value>
                <fullName>Retalix DAX Analyzer</fullName>
            </value>
            <value>
                <fullName>Retalix Power Analyzer</fullName>
            </value>
            <value>
                <fullName>Retalix Power Buy</fullName>
            </value>
            <value>
                <fullName>Retalix Power Facts</fullName>
            </value>
            <value>
                <fullName>Retalix Power IM/Recipe</fullName>
            </value>
            <value>
                <fullName>Retalix Power Sell Sales Analalysis</fullName>
            </value>
            <value>
                <fullName>Retalix Triceps Analyzer</fullName>
            </value>
            <value>
                <fullName>SAP (Business Objects)</fullName>
            </value>
            <value>
                <fullName>Not Used</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>