force-app/main/default/objects/Industry_Profile__c/fields/Cash_Recycling__c.field-meta.xml
<CustomField>
    <fullName>Cash_Recycling__c</fullName>
    <label>Cash Recycling</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BanqIT</fullName>
            </value>
            <value>
                <fullName>Diebold</fullName>
            </value>
            <value>
                <fullName>Fujitsu</fullName>
            </value>
            <value>
                <fullName>GRG</fullName>
            </value>
            <value>
                <fullName>Hitachi</fullName>
            </value>
            <value>
                <fullName>Hyosung</fullName>
            </value>
            <value>
                <fullName>Keba</fullName>
            </value>
            <value>
                <fullName>NCR</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Oki</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Talaris</fullName>
            </value>
            <value>
                <fullName>Wincor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>