force-app/main/default/objects/Industry_Profile__c/fields/CD_Branch_Locations__c.field-meta.xml
<CustomField>
    <fullName>CD_Branch_Locations__c</fullName>
    <label>CD (Branch Locations)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Diebold</fullName>
            </value>
            <value>
                <fullName>GRG</fullName>
            </value>
            <value>
                <fullName>Hyosung</fullName>
            </value>
            <value>
                <fullName>NCR</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Tranax</fullName>
            </value>
            <value>
                <fullName>Triton</fullName>
            </value>
            <value>
                <fullName>Wincor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>