force-app/main/default/objects/Industry_Profile__c/fields/CD_Branch_Locations_Status__c.field-meta.xml
<CustomField>
    <fullName>CD_Branch_Locations_Status__c</fullName>
    <inlineHelpText>Indicate the current status of cash dispensers deployed at branches.</inlineHelpText>
    <label>CD Branch Locations: Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deployed</fullName>
            </value>
            <value>
                <fullName>In Pilot</fullName>
            </value>
            <value>
                <fullName>In Evaluation</fullName>
            </value>
            <value>
                <fullName>No activity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>