force-app/main/default/objects/Industry_Profile__c/fields/CD_Off_Premise_Locations_Status__c.field-meta.xml
<CustomField>
    <fullName>CD_Off_Premise_Locations_Status__c</fullName>
    <inlineHelpText>Indicate the current status of cash dispensers deployed outside the branches.  Examples: In convenience stores, grocery stores, shopping centers.</inlineHelpText>
    <label>CD Off-Premise Locations: Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deployed</fullName>
            </value>
            <value>
                <fullName>In Pilot</fullName>
            </value>
            <value>
                <fullName>In Evaluation</fullName>
            </value>
            <value>
                <fullName>No activity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>