force-app/main/default/objects/Industry_Profile__c/fields/CDB_Comments__c.field-meta.xml
<CustomField>
    <fullName>CDB_Comments__c</fullName>
    <label>CDB_Comments</label>
    <type>TextArea</type>
</CustomField>