force-app/main/default/objects/Industry_Profile__c/fields/CDB_NCR__c.field-meta.xml
<CustomField>
    <fullName>CDB_NCR__c</fullName>
    <label>CDB_NCR</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>