force-app/main/default/objects/Industry_Profile__c/fields/CDB_Other_Names__c.field-meta.xml
<CustomField>
    <fullName>CDB_Other_Names__c</fullName>
    <label>CDB_Other (Names)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>