force-app/main/default/objects/Industry_Profile__c/fields/CDB_Wincor__c.field-meta.xml
<CustomField>
    <fullName>CDB_Wincor__c</fullName>
    <label>CDB_Wincor</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>