force-app/main/default/objects/Industry_Profile__c/fields/CDO_Comments__c.field-meta.xml
<CustomField>
    <fullName>CDO_Comments__c</fullName>
    <label>CDO_Comments</label>
    <type>TextArea</type>
</CustomField>