force-app/main/default/objects/Industry_Profile__c/fields/CDO_Hyosung__c.field-meta.xml
<CustomField>
    <fullName>CDO_Hyosung__c</fullName>
    <label>CDO_Hyosung</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>