force-app/main/default/objects/Industry_Profile__c/fields/Check_Processing_Provider__c.field-meta.xml
<CustomField>
    <fullName>Check_Processing_Provider__c</fullName>
    <label>Check Processing Provider</label>
    <length>100</length>
    <type>Text</type>
</CustomField>