force-app/main/default/objects/Industry_Profile__c/fields/Commercial_Image_Capture__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Image_Capture__c</fullName>
    <label>Commercial Image Capture</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NCR</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>