force-app/main/default/objects/Industry_Profile__c/fields/CUPPS_Provider__c.field-meta.xml
<CustomField>
    <fullName>CUPPS_Provider__c</fullName>
    <inlineHelpText>Air only. Select one.</inlineHelpText>
    <label>CUPPS Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arinc</fullName>
            </value>
            <value>
                <fullName>IBM</fullName>
            </value>
            <value>
                <fullName>IER</fullName>
            </value>
            <value>
                <fullName>Materna</fullName>
            </value>
            <value>
                <fullName>NCR</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>SITA</fullName>
            </value>
            <value>
                <fullName>Ultra</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>