force-app/main/default/objects/Industry_Profile__c/fields/Current_Booking_Engine_Provider__c.field-meta.xml
<CustomField>
    <fullName>Current_Booking_Engine_Provider__c</fullName>
    <label>Current Booking Engine Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AIRS</fullName>
            </value>
            <value>
                <fullName>Amadeus</fullName>
            </value>
            <value>
                <fullName>Deltamatic</fullName>
            </value>
            <value>
                <fullName>Mercator</fullName>
            </value>
            <value>
                <fullName>Navitaire</fullName>
            </value>
            <value>
                <fullName>NCR</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Radixx</fullName>
            </value>
            <value>
                <fullName>Sabre</fullName>
            </value>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Shares</fullName>
            </value>
            <value>
                <fullName>Worldspan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>